sale alignment fix

--- a/app/assets/stylesheets/soldstyles/_default_themes.scss
+++ b/app/assets/stylesheets/soldstyles/_default_themes.scss
@@ -1222,7 +1222,7 @@ div.auto-over{
   @include border-radius($radius: 5px);
   @include box-shadow($shadow: 0 4px 8px rgba(0,0,0,.25));
 
-    div.start {text-align: left;}
+    div.start {text-align: left; margin-left:5px}
 }
 
 .sale-image {width:220px; height:165px; margin: 10px 0 10px 0; text-align: center;}
